text alignement fix🚀

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -243,6 +243,7 @@ align-items: center;
 
   footer h3 {
     font-size: 1.3rem;
+    text-align: center;
   }
 
   .NotFound {
